[tool.poetry]
name = "deepdpm"
version = "0.1.0"
description = ""
authors = ["Vicente Reyes-Puerta <vr.github@outlook.com>"]

[tool.poetry.dependencies]
python = "~3.9"
joblib = "1.1.0"
kmeans-pytorch = "0.3"
matplotlib = "3.5.1"
numpy = "1.20.3"
pandas="1.4.1"
Pillow = "9.0.1"
pytorch-lightning = "1.2.10"
scikit-learn = "1.0.2"
scipy="1.7.3"
seaborn="0.11.2"
torch="1.11.0"
torchvision="0.12.0"
tqdm="4.63.0"
umap-learn="0.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
